syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "SamplegRpc";

package product;

service Product {
  rpc AddProduct (ProductModel) returns (ProductAddResponse);
  rpc GetAllProducts (google.protobuf.Empty) returns (ProductList);
}

message ProductList{
	repeated ProductModel products = 1;
}

message ProductModel{
	string ProductName = 1;
	string ProductCode = 2;
	double Price = 3;
	google.protobuf.Timestamp StockDate = 4;
}

message ProductAddResponse{
	int32 StatusCode = 1;
	bool IsSuccessful = 2;
}

